# cyber-task-horizons-data

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  references.bib
analysis/: config.py
analysis/figures/: .gitignore  dvc.yaml  params.yaml
analysis/figures/data/: 10m_samples.pkl  best_available_times.json  datasets_table.json  model_runs.parquet  model_runs_gpt53_10M.parquet  model_summaries_human_2M.parquet  model_summaries_human_2M_gpt53_10M.parquet  model_summaries_runs_2M.parquet  os_data_cache.pkl  paper_stats.json  regularisation_comparison.json  sensitivity_dual.json  task_difficulties.parquet  trendline_alternatives.json  trendline_params_human_2M.json
analysis/figures/stages/: _common.py  _common_data.py  _sota.py  bootstrap.py  emit_gpt55_chart_jsons.py  fit_summaries.py  fit_trendline.py  irt_grid.py  p50_vs_budget.py  paper_stats.py  plot_bootstrap_models_example.py  plot_icc_gauge.py  (+28 more)
analysis/lib/: __init__.py  calibration.py  constants.py  corrections.py  data.py  estimates.py  eval_sets.py  icc.py  irt.py  lyptus_style.py  outliers.py  plots.py  results.py  token_efficiency.py  tool_use.py  trendline.py
analysis/tests/: test_calibration.py  test_corrections.py  test_data.py  test_icc.py  test_paper_data.py  test_pipeline.py  test_trendline.py
data/human/: DATA_DICTIONARY.md  README.md  completions.csv  estimations.csv  expert_survey.csv  human_snapshot.json
data/methodology/: README.md  research_agent.py
data/models/: anthropic.json  google.json  openai.json  other.json  xai.json
data/tasks/: task_metadata.csv
(+508 files in other folders)
