[project]
name = "cyber-task-horizons-data"
version = "1.0.0"
description = "Data and analysis code for 'Offensive Cyber Task Horizons' (Lyptus Research, 2026)"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jack Payne"},
    {name = "Jeremy Miller"},
    {name = "Sean Peters"},
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0.0",
    "cairosvg>=2.9.0",
    "dvc>=3.50.0",
    "horizon @ git+https://github.com/METR/eval-analysis-public.git@52cb829c7a2efb2d659285c4b1768d191d97f8d2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
